--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a href="#">Accueil</a></li>
                         <li><a href="#">Blog</a></li>
-                        <li><a href="cvmeziani.docx" title="telecharger mon CV">CV</a></li>
+                        <li><a href="#" title="telecharger mon CV">CV</a></li>
 
                         <li><a href="mailto:meziani-i@outlook.fr" title="envoyer un mail">Contact</a></li>
                     </ul>
