--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li><a href="#">Accueil</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#" title="telecharger mon CV">CV</a></li>
-                        <li><a href="#liste_amis">Mes amis</a></li>
+                        <li><a href="#listes_amis">Mes amis</a></li>
 
                         <li><a href="mailto:meziani-i@outlook.fr" title="envoyer un mail">Contact</a></li>
                     </ul>
